blessy_tech_academy/errors.log
Internal Server Error: /dashboard/
Traceback (most recent call last):
  File "C:\Projects\venv\Lib\site-packages\django\template\base.py", line 577, in parse
    compile_func = self.tags[command]
                   ~~~~~~~~~^^^^^^^^^
KeyError: 'else'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Projects\venv\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
  File "C:\Projects\venv\Lib\site-packages\django\core\handlers\base.py", line 198, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "C:\Projects\venv\Lib\site-packages\django\contrib\auth\decorators.py", line 59, in _view_wrapper
    return view_func(request, *args, **kwargs)
  File "C:\projects\blessy_tech_academy\academie\views.py", line 225, in dashboard
    return render(request, 'academie/dashboard.html', {
        'user': user,
    ...<2 lines>...
        'formations_actives': formations_actives,
    })
  File "C:\Projects\venv\Lib\site-packages\django\shortcuts.py", line 25, in render
    content = loader.render_to_string(template_name, context, request, using=using)
  File "C:\Projects\venv\Lib\site-packages\django\template\loader.py", line 61, in render_to_string
    template = get_template(template_name, using=using)
  File "C:\Projects\venv\Lib\site-packages\django\template\loader.py", line 15, in get_template
    return engine.get_template(template_name)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Projects\venv\Lib\site-packages\django\template\backends\django.py", line 79, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Projects\venv\Lib\site-packages\django\template\engine.py", line 186, in get_template
    template, origin = self.find_template(template_name)
                       ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Projects\venv\Lib\site-packages\django\template\engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
  File "C:\Projects\venv\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
  File "C:\Projects\venv\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
        contents,
    ...<2 lines>...
        self.engine,
    )
  File "C:\Projects\venv\Lib\site-packages\django\template\base.py", line 157, in __init__
    self.nodelist = self.compile_nodelist()
                    ~~~~~~~~~~~~~~~~~~~~~^^
  File "C:\Projects\venv\Lib\site-packages\django\template\base.py", line 199, in compile_nodelist
    nodelist = parser.parse()
  File "C:\Projects\venv\Lib\site-packages\django\template\base.py", line 585, in parse
    raise self.error(token, e)
  File "C:\Projects\venv\Lib\site-packages\django\template\base.py", line 583, in parse
    compiled_result = compile_func(self, token)
  File "C:\Projects\venv\Lib\site-packages\django\template\loader_tags.py", line 307, in do_extends
    nodelist = parser.parse()
  File "C:\Projects\venv\Lib\site-packages\django\template\base.py", line 585, in parse
    raise self.error(token, e)
  File "C:\Projects\venv\Lib\site-packages\django\template\base.py", line 583, in parse
    compiled_result = compile_func(self, token)
  File "C:\Projects\venv\Lib\site-packages\django\template\loader_tags.py", line 235, in do_block
    nodelist = parser.parse(("endblock",))
  File "C:\Projects\venv\Lib\site-packages\django\template\base.py", line 579, in parse
    self.invalid_block_tag(token, command, parse_until)
    ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Projects\venv\Lib\site-packages\django\template\base.py", line 634, in invalid_block_tag
    raise self.error(
    ...<8 lines>...
    )
django.template.exceptions.TemplateSyntaxError: Template: C:\projects\blessy_tech_academy\academie\templates\academie\dashboard.html, Invalid block tag on line 155: 'else', expected 'endblock'. Did you forget to register or load this tag?
"GET /dashboard/ HTTP/1.1" 500 237138
Internal Server Error: /admin/gestion-cours/
Traceback (most recent call last):
  File "C:\Projects\venv\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
  File "C:\Projects\venv\Lib\site-packages\django\core\handlers\base.py", line 198, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "C:\Projects\venv\Lib\site-packages\django\utils\decorators.py", line 192, in _view_wrapper
    result = _process_exception(request, e)
  File "C:\Projects\venv\Lib\site-packages\django\utils\decorators.py", line 190, in _view_wrapper
    response = view_func(request, *args, **kwargs)
  File "C:\Projects\venv\Lib\site-packages\django\views\decorators\cache.py", line 80, in _view_wrapper
    response = view_func(request, *args, **kwargs)
  File "C:\Projects\venv\Lib\site-packages\django\contrib\admin\sites.py", line 247, in inner
    return view(request, *args, **kwargs)
  File "C:\Projects\venv\Lib\site-packages\django\contrib\auth\decorators.py", line 56, in _view_wrapper
    test_pass = test_func(request.user)
                          ^^^^^^^^^^^^
AttributeError: 'GestionCoursAdminSite' object has no attribute 'user'
"GET /admin/gestion-cours/ HTTP/1.1" 500 105587
Internal Server Error: /admin/gestion-cours/
Traceback (most recent call last):
  File "C:\Projects\venv\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
  File "C:\Projects\venv\Lib\site-packages\django\core\handlers\base.py", line 198, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "C:\Projects\venv\Lib\site-packages\django\utils\decorators.py", line 192, in _view_wrapper
    result = _process_exception(request, e)
  File "C:\Projects\venv\Lib\site-packages\django\utils\decorators.py", line 190, in _view_wrapper
    response = view_func(request, *args, **kwargs)
  File "C:\Projects\venv\Lib\site-packages\django\views\decorators\cache.py", line 80, in _view_wrapper
    response = view_func(request, *args, **kwargs)
  File "C:\Projects\venv\Lib\site-packages\django\contrib\admin\sites.py", line 247, in inner
    return view(request, *args, **kwargs)
  File "C:\Projects\venv\Lib\site-packages\django\contrib\auth\decorators.py", line 56, in _view_wrapper
    test_pass = test_func(request.user)
                          ^^^^^^^^^^^^
AttributeError: 'GestionCoursAdminSite' object has no attribute 'user'
"GET /admin/gestion-cours/ HTTP/1.1" 500 105586
